# wintermute

./: .gitignore  CLAUDE.md  CODEOWNER  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.sandbox  LICENSE  README.md  config.example.toml  deny.toml  flatline.toml.example  install.sh  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/implement-kernel-module/: SKILL.md
.claude/skills/implement-pfar-task/: SKILL.md
.claude/skills/implement-task/: SKILL.md
.claude/skills/implement-wintermute-task/: SKILL.md
.githooks/: pre-push
.github/: main-ruleset.json
.github/workflows/: auto-release.yml  build-and-test.yml  dependency-audit.yml  docker-build-check.yml.template  docker-publish.yml.template  linter.yml  pr-title.yml  release.yml  ub-detection.yml
dev/: AGENT.md
dev/skills/: implement-wintermute-task.md  plan-wintermute-task.md  quality-check-wintermute.md  review-wintermute-pr.md
doc/: FLATLINE.md  mainpage-doc.md
docs/: mainpage-doc.md  pfar-feature-config.md  pfar-feature-credential-acquisition.md  pfar-feature-dynamic-integrations-final.md  pfar-feature-dynamic-integrations.md  pfar-feature-fast-path.md  pfar-feature-memory.md  pfar-feature-persistence-recovery.md  pfar-feature-persona-onboarding.md  pfar-feature-self-extending-skills.md  pfar-session-amnesia-analysis.md  pfar-system-identity-document.md  pfar-v2-prd.md  pfar-v2-spec.md  testing-integration.md
flatline/: Cargo.toml  build.rs
flatline/migrations/: 001_flatline_schema.sql
flatline/src/: config.rs  db.rs  diagnosis.rs  fixer.rs  lib.rs  main.rs  patterns.rs  reporter.rs  services.rs  stats.rs  updater.rs  watcher.rs
flatline/tests/: config_test.rs  db_test.rs  diagnosis_test.rs  fixer_test.rs  patterns_test.rs  reporter_test.rs  security_test.rs  services_test.rs  stats_test.rs  updater_test.rs  watcher_test.rs
launchd/: com.wintermute.agent.plist  com.wintermute.flatline.plist
migrations/: 001_schema.sql  002_memory.sql  003_sessions.sql  004_briefs.sql
src/: config.rs  credentials.rs  lib.rs  logging.rs  main.rs
src/adapters/: cli.rs  mod.rs  telegram.rs
src/agent/: approval.rs  budget.rs  context.rs  identity.rs  loop.rs  mod.rs  policy.rs  session_manager.rs
src/config/: mod.rs
src/executor/: direct.rs  docker.rs  egress.rs  mod.rs  playwright.rs  redactor.rs
src/extractors/: message.rs  mod.rs
src/heartbeat/: backup.rs  digest.rs  health.rs  mod.rs  proactive.rs  scheduler.rs  tool_review.rs
src/kernel/: CLAUDE.md  approval.rs  audit.rs  credential.rs  credential_gate.rs  egress.rs  executor.rs  flow_manager.rs  inference.rs  journal.rs  mod.rs  pipeline.rs  planner.rs  policy.rs  recovery.rs  router.rs  session.rs  sid.rs  synthesizer.rs  template.rs  vault.rs
src/memory/: embedder.rs  mod.rs  search.rs  writer.rs
src/messaging/: audit.rs  brief.rs  contacts.rs  mod.rs  outbound_composer.rs  outbound_context.rs  outbound_redactor.rs
src/observer/: extractor.rs  mod.rs  reflection.rs  staging.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  router.rs
src/telegram/: commands.rs  input_guard.rs  media.rs  mod.rs  ui.rs
src/tools/: admin.rs  browser.rs  browser_bridge.rs  calendar.rs  core.rs  create_tool.rs  docker.rs  email.rs  escalate.rs  flatline.rs  manage_brief.rs  memory.rs  mod.rs  read_messages.rs  registry.rs  scoped_http.rs  send_message.rs
src/tools/mcp/: client.rs  mod.rs  (+3 more)
src/types/: mod.rs
src/whatsapp/: client.rs  events.rs  mod.rs  router.rs  setup.rs
systemd/: flatline.service  wintermute.service
tasks/: 002-phase2a-standalone-components-prd.md  003-phase2b-tool-system-prd.md  004-phase2c-agent-loop-prd.md  005-phase2d-telegram-adapter-prd.md  006-phase3-observer-heartbeat-prd.md  007-phase4-flatline-supervisor-prd.md  008-openai-gpt-oauth-prd.md  009-playwright-browser-bridge-prd.md  010-messaging-session-privacy-prd.md  pfar-v2-prd.md
tests/: agent.rs  config.rs  credentials.rs  executor.rs  heartbeat.rs  integration_test.rs  logging.rs  main.rs  memory.rs  observer.rs  providers.rs  regression_persistence.rs  regression_phase2.rs  regression_phase3.rs  security_invariants_test.rs  telegram.rs  tools.rs
tests/agent/: approval_test.rs  budget_test.rs  context_test.rs  identity_test.rs  loop_test.rs  policy_test.rs  session_test.rs
tests/config/: config_test.rs
tests/credentials/: credentials_test.rs  oauth_test.rs  refresh_test.rs
tests/executor/: direct_policy_test.rs  docker_invariants_test.rs  egress_test.rs  exec_result_test.rs  health_status_test.rs  path_traversal_test.rs  playwright_test.rs  redact_result_test.rs  redactor_test.rs  shell_escape_test.rs
tests/heartbeat/: backup_test.rs  digest_test.rs  health_test.rs  proactive_test.rs  scheduler_test.rs  tool_review_test.rs
tests/logging/: logging_test.rs
tests/main/: cli_test.rs
tests/memory/: embedder_test.rs  migration_test.rs  search_test.rs  writer_test.rs
tests/observer/: extractor_budget_test.rs  extractor_test.rs  reflection_test.rs  staging_test.rs
tests/providers/: anthropic_test.rs  http_response_test.rs  ollama_test.rs  openai_test.rs  provider_contract_test.rs  router_test.rs  types_test.rs
tests/telegram/: commands_test.rs  input_guard_test.rs  media_test.rs  no_reply_test.rs  ui_test.rs
tests/tools/: browser_bridge_test.rs  browser_test.rs  core_test.rs  create_tool_test.rs  docker_test.rs  escalate_test.rs  flatline_test.rs  registry_test.rs  tool_router_test.rs
(+7 files in other folders)
