# TODO(template) update for your crate name
[package]
name = "mycrate" # Choose a placeholder name
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"] # Add placeholder authors
description = "A description of your crate" # Add placeholder description
# TODO(template) update for your repository
repository = "https://github.com/IgraLabs/rust-template"
license = "Apache-2.0" # TODO(template) update license if needed


[dependencies]
# Add dependencies here, for example:
# log = "0.4"
thiserror = {version = "1.0", default-features = false }

# Moved lints from [workspace.lints.*] to [lints.*]
[lints.rust]
missing_docs = "deny"
# TODO(template) if you use any unsafe code, then running miri in CI is a must
# if for a crate in the workspace you need an unsafe code
# prefer to preserve forbid for the workspace
# and allowing only at a specific crate level
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
