[package]
name = "pfar"
version = "0.1.0"
edition = "2021"
authors = ["Igor Markelov <igor@igralabs.com>"]
description = "Privacy-First Agent Runtime v2 — a hardened monolith AI agent runtime"
repository = "https://github.com/IgraLabs/muscat-v2"
license = "Apache-2.0"

[[bin]]
name = "pfar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
