[package]
name = "wintermute"
version = "0.1.0"
edition = "2021"
authors = ["Igor Markelov <pycckuu@gmail.com>"]
description = "Self-coding AI agent with Telegram interface and sandboxed Docker execution"
repository = "https://github.com/pycckuu/wintermute"
license = "Apache-2.0"

[lib]
name = "wintermute"
path = "src/lib.rs"

[[bin]]
name = "wintermute"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Docker
bollard = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
regex = "1"
url = "2"
rand = "0.8"
notify = "7"
cron = "0.13"
directories = "5"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
