[package]
name = "flatline"
version = "0.9.0"
edition = "2021"
authors = ["Igor Markelov <pycckuu@gmail.com>"]
description = "Supervisor process for the Wintermute AI agent"

[lib]
name = "flatline"
path = "src/lib.rs"

[[bin]]
name = "flatline"
path = "src/main.rs"

[dependencies]
wintermute = { path = ".." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
teloxide = { version = "0.13", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
semver = "1"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
filetime = "0.2"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
